Change min required Node.JS version to 18.17.0 (#4652)